--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@ h5.text_content{
 	padding-right: 80px;
 }
 .card_wrapper{
+	width: 100%;
 	float: left;
 }
 .card_wrapper .col2{
@@ -153,23 +154,23 @@ h5.text_content{
 	padding-left: 30px;
 }
 .card_wrapper .card{
-	background-color: #FFDD62;
 	border-radius: 0;
 	border: none;
 	margin-bottom: 30px;
-	max-width: 300px;
+	
 }
-.card .card_image img{
-	max-width: 300px;
+ .card_image img{
+	width: 100%;
 	min-height: 160px;
 	object-fit: cover;
 } 
-.card .card_text{
+.card h6{
 	padding: 15px;
 	display: flex;
 }
  h6.card-title{
-	color: #304659;
+	background-color: #FFDD62;
+	color: #242424;
 	font-size: 20px;
 	font-weight: 400;
 	line-height: 25px;
@@ -541,7 +542,8 @@ p{
 .cart_wrapper a.signupfree{
 	color:#FF7900; 
 }
-.signup_wrapper{
+.signup_wrapper{width: 100%;
+	float: left;
 	padding: 82px 0 90px 0;
 }
 .signup_wrapper h4.title_wrapper{
@@ -552,11 +554,13 @@ p{
 	padding: 8px 36px;
 }
 .client_wrapper{
+	position: relative;
+	width: 100%;
+	float: left;
 	background-color: #FFDD62;
 	padding: 98px 0 115px 0;
 }
 .client_wrapper .grid-container {
-	position: relative;
 	display: grid;
 	grid-gap: 20px 30px;
 	grid-template-columns: auto auto auto;
@@ -600,6 +604,8 @@ p{
 	margin-top: 25px;
 }
 .form_wrapper {
+	width: 100%;
+	float: left;
 	background-color: #FFF9EA;
 	padding: 70px 0 80px 0;
 }
@@ -647,23 +653,23 @@ footer{
 	font-size: 17px;
 	font-weight: 400;
 	line-height: 25px;
-	padding-bottom: 20px;
-    width: 100%;
+	padding-bottom: 28px;
+	width: 100%;
+	float: left;
 }
 footer .footer-top {
-    padding-top: 40px;
-    padding-bottom: 30px;
+    padding-top: 32px;
+    padding-bottom: 33px;
+}
+.footer-top ul{
+	margin-bottom: 0;
 }
 footer .footerlink{ 
 	display: flex;
     list-style: none;
 }
 footer .footerlink a{  
-    font-family: 'Roboto',sans-serif;
 	color: #FFF9EA;
-	font-size: 17px;
-	font-weight: 400;
-	line-height: 25px;
 	text-align: left;  
 	padding-right: 45px;
 	margin: 0;
@@ -693,7 +699,7 @@ footer .copy_right_text .footer_border {
    padding-bottom: 30px;
 }
 footer .copyright p{
-	padding: 10px 0;
+	padding: 0 0 10px;
 	text-align: center;
 	font-size: 15px;
   	line-height: 20px;
@@ -708,6 +714,205 @@ footer .footer_image img{
 footer .social-media li.text_button {
     padding-right: 0;
 }
+/** raffle-page **/
+.raffle_header{
+    background-image: url(../svg/left_curve.svg), url(../svg/right_curve.svg);
+    background-position: 0 0, 110% 0 ;
+    background-repeat: no-repeat, no-repeat;
+    border: 1px solid #F6DB99;
+    background-size: 43% , contain;
+    padding-bottom: 0;
+}
+.raffle_header nav.navbar {
+    padding: 36px 0 36px 0;
+    margin-bottom: 0; 
+}
+.raffle_page {
+    background-color: #FFFDF7;
+}
+.filter_wrapper .inner_content{
+	padding: 50px 0 82px 0;
+}
+.inner_content h2{
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 75px;
+    text-align: center;
+}
+.raffle_section h4{
+    color: #3A2315;
+    font-size: 22px;
+    margin-bottom: 17px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.raffle_section .card_wrapper .card{
+    position: relative;
+    background-color: #FFFFFF;
+    border: 1px solid #FFE189;
+    border-radius:0 0 6px 6px;
+    max-width: 350px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: inline-block;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+.fa-chevron-right {
+    position: absolute;
+    right: 18px;
+}
+.raffle_section .card h6.card-title{
+	display: flex;
+    align-items: center;
+    justify-content: left;
+}
+ .card-columns{
+	column-count: 3;	
+}
+.card_wrapper .card-columns .card{
+	display: inline-block;
+	width: 100%;
+}
+.card_footer{
+	padding: 18px 16px 21px 18px;
+}
+.card_footer p{
+	color: #000000;
+	font-family: 'Lato',sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 24px;
+	text-align: left;
+	margin-bottom: 19px;
+}
+.card_body span.card_price{
+	color: #8CA5AF;
+	background-color: #E3F7FF;
+	border-radius: 4px;
+	font-family: 'Lato',sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 24px;
+	width: 47px;
+	height: 28px;
+	display: flex;
+    align-items: center;
+	justify-content: center;
+}
+.active_raffle .card:hover{
+	border: 1px solid #32C5FF;
+	box-shadow: 0 2px 34px 0 rgba(24, 69, 86, 0.13);
+	transition: 0.3s all ease-in-out;
+}
+.active_raffle .card:hover h6.card-title,
+.active_raffle .card:hover h6.card-title:hover{
+	background-color: #32C5FF;
+	color: #FFFFFF;
+}
+.card .clock_label{
+	background-color: #FFFFFF;
+	border-radius: 36px 0 0 36px;
+	width: 115px;
+	height: 28px;	
+	color: #595959;
+	font-family: 'Lato',sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 16.8px;
+	text-align: left;
+	padding-right: 10px;
+	display: flex;
+    align-items: center;
+	justify-content: flex-end;
+	position: absolute;
+    right: 0;
+    top: 20px;
+}
+.raffle_section .card .clock_label.closed{
+	width: 83px;
+}
+.closed_raffle{
+	width: 100%;
+	padding-top: 50px;
+	float: left;
+}
+.raffle_section .card .clock_label.closed i {
+	color: #FF5F5F
+}
+.raffle_section .card .clock_label i {
+    margin-right: 4px;
+}
+.closed_raffle .card .card-title, 
+.closed_raffle .card .card-title:hover {
+    background-color: #D7D7D7;
+    color: #242424;
+}
+.closed_raffle .card{
+	color: #888888;
+	font-family: 'Lato',sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 16.8px;
+}
+.closed_raffle .card {
+    border: 1px solid #D7D7D7;
+}
+.raffle_section .card_body .closed_wrap{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+button.btn-pink {
+    background-color:#FFF3D5;
+    border-radius: 20px;
+    color: #FF7900;
+    font-family: 'Lato',sans-serif;
+    font-size: 27px;
+    font-weight: 400;
+    line-height: 32.4px;
+    text-align: center;
+}
+.pagination_wrapper{
+	width: 100%;
+	float: left;
+	padding: 72px 0 100px 0;
+}
+.pagination_wrapper .pagination button {
+    width: 40px;
+    height: 40px;
+    padding: 0px;
+    font-size: 14px;
+}
+.pagination_wrapper li.page-item.page {
+    background-color: #FFFFFF;
+    border: 1px solid #E9E9E9;
+    border-radius: 20px;
+    width: 60px;
+    height: 40px;
+    margin: 0 10px;
+    padding: 10px 15px 12px;
+    outline: none;
+	text-align: center;
+}
+.pagination_wrapper li.page-item a{
+	color: #2E2E2E;
+    font-family: 'Lato',sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.6px;  
+}
+.pagination_wrapper .pagination{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+button.btn-disabled {
+    background-color: #F3F3F3;
+    color: #D5D5D5;
+}
+
 @media (max-width: 767px){
 	.homesection {
 		padding-bottom: 42px;
@@ -728,7 +933,7 @@ footer .social-media li.text_button {
 	a.navbar-brand {
 		max-width: 170px;
 	}
-	#navbarSupportedContent {
+	.homesection #navbarSupportedContent {
 		background: #FFFFFF;
 		position: absolute;
 		top: 57px;
@@ -812,7 +1017,7 @@ footer .social-media li.text_button {
 		width: 16px;
 		margin-left: 10px;
 	}
-	.card .card_text{
+	.card h6{
 		padding: 10px;
 		justify-content: center;
 	}  
@@ -1254,7 +1459,7 @@ footer .social-media li.text_button {
 		margin-left: -90px;
 		float: right;
 	}
-	.card .card_text{
+	.card h6{
 		padding: 10px ;
 		justify-content: center;
 	} 
@@ -1517,9 +1722,9 @@ footer .social-media li.text_button {
 	}
 }
 @media(min-width: 1024px){
-	.card_wrapper .card{
+	/* .card_wrapper .card{
 		max-width: 300px;
-	}
+	} */
 	.card_text img {
 		width: 24px;
 		margin-left: 6px;
@@ -1544,9 +1749,9 @@ footer .social-media li.text_button {
 		padding: 0;
 		width: 120%;
 	}
-	.card .card_text{
+	.card h6{
 		padding: 10px 6px;
-		justify-content: center;
+		
 	}  
 	.springwrapper .text_box {
 		padding-top: 45px;
