--- a/css/style.css
+++ b/css/style.css
@@ -723,6 +723,9 @@ footer .social-media li.text_button {
     background-size: 43% , contain;
     padding-bottom: 0;
 }
+.raffle_page .homesection{
+	padding-bottom: 0;
+}
 .raffle_header nav.navbar {
     padding: 36px 0 36px 0;
     margin-bottom: 0; 
@@ -735,9 +738,11 @@ footer .social-media li.text_button {
 }
 .inner_content h2{
     font-size: 50px;
-    font-weight: 400;
+    font-weight: 700;
     line-height: 75px;
-    text-align: center;
+	text-align: center;
+	padding-bottom: 37px;
+	margin-bottom: 0;
 }
 .raffle_section h4{
     color: #3A2315;
@@ -904,6 +909,7 @@ button.btn-pink {
     line-height: 21.6px;  
 }
 .pagination_wrapper .pagination{
+	margin-bottom: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -912,6 +918,122 @@ button.btn-disabled {
     background-color: #F3F3F3;
     color: #D5D5D5;
 }
+.filter_wrapper form{
+	max-width: 962px;
+	background-color: #F6F4EF;
+    border-radius: 10px;
+    padding: 26px 30px;
+	margin: 0 auto;
+	display:flex;
+}
+.filter_wrapper .right {
+    position: relative;
+}
+.filter_wrapper label{
+	color: #000000;
+    font-family: 'Lato',sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 28.8px;
+    text-align: left;
+}
+.filter_wrapper .left label {
+    margin-right: 24px;
+}
+.filter_wrapper .left input {
+    margin-right: 30px;
+    max-width: 257px;
+}
+.checkbox_content {
+	display: inline;
+	position: relative;
+    padding-left:35px;
+    cursor: pointer;
+    font-size: 22px;
+}
+.checkbox_content .checkmark {
+	position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+	width: 25px;
+	border-radius: 4px;
+	background-color: #ccc;
+}
+.checkbox_content .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+.checkbox_content input[type="checkbox"]:checked ~ .checkmark:after {
+    display: block;
+}
+.checkbox_content .checkmark:after {
+    left: 9px;
+    top: 4px;
+    width: 8px;
+    height: 14px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.checkbox_content input {
+	position: absolute;
+	opacity: 0;
+	cursor: pointer;
+	height: 0;
+	width: 0;
+} 
+  .checkbox_content input[type="checkbox"]:checked ~ .checkmark {
+    background-color: #0091FF;
+    border-radius: 4px;
+}
+.filter_wrapper input[type="text"] {
+    color: #000000;
+    font-family: 'Lato',sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 28.8px;
+	text-align: left;
+	background-color: #FFFFFF;
+    border-radius: 6px;
+    border: none;
+    padding: 18px 15px;
+    outline: none;
+    box-shadow: none;
+}
+.filter_wrapper .right input[type="text"] {
+    background-image: url(../images/chevron_icon.svg);
+    background-repeat: no-repeat;
+    background-size: 15px;
+	background-position: 87% 50%;
+	font-weight: 400;
+	position: relative;
+    z-index: 3;
+}
+.filter_wrapper form .left {
+    border-right: 1px solid #DBD7CC;
+    margin-right: 30px;
+}
+.filter_wrapper .right input[type="text"] {
+	max-width: 181px;
+    margin-right: 26px;
+}
+.filter_menu_wrap {
+	position: absolute;
+    background-color: #FFFFFF;
+    border: 1px solid #979797;
+    border-radius: 12px;
+    width: 709px;
+    right: 52%;
+    padding: 40px 35px;
+    z-index: 3;
+	
+	display: none;
+}
+
 
 @media (max-width: 767px){
 	.homesection {
@@ -936,7 +1058,7 @@ button.btn-disabled {
 	.homesection #navbarSupportedContent {
 		background: #FFFFFF;
 		position: absolute;
-		top: 57px;
+		top: 60px;
 		width: 100%;
 		padding: 20px;
 		border-radius: 6px;
@@ -1385,7 +1507,96 @@ button.btn-disabled {
 		width: 40px;
 		margin: 0 auto;
 	}
-}
+	.raffle_header {
+		background-position: 0 0, 105% 0;
+		background-size: 42% , contain;
+	}
+	.raffle_header nav.navbar {
+		padding: 15px 0 12px 0;
+	}
+	.filter_wrapper .inner_content {
+		padding: 26px 0 40px 0;
+	}
+	.filter_wrapper h2 {
+		font-size: 30px;
+		line-height: 36px;
+		padding-bottom: 16px;
+	}
+	.filter_wrapper form {
+		padding: 20px 12px;
+		flex-direction: column;
+	}
+	.filter_wrapper .left label {
+		margin-right: 0;
+		margin-bottom: 0;
+		padding-bottom: 12px;
+		width: 100%;
+	}
+	.filter_wrapper input[type="text"] {
+		font-size: 18px;
+		line-height: 22px;
+		width: 100%;
+		padding: 12px 15px;
+	}
+	.filter_wrapper .left input,.filter_wrapper .right input[type="text"] {
+		max-width: 100%;
+		margin-right: 0 !important;
+	}
+	.title-wrapper .right input[type="text"] {
+		background-size: 13px;
+	}
+	label.checkbox_content {
+		margin-top: 16px;
+	}
+	.filter_wrapper .right {
+		padding-top: 15px;
+	}	
+	.filter_wrapper label {
+		font-size: 16px;
+		line-height: 24px;
+	}
+	.filter_wrapper form .left, .filter_wrapper .right {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+	.raffle_section h4 {
+		font-size: 18px;
+		line-height: 30px;
+		margin-bottom: 14px;
+	}
+	.filter_wrapper form .left {
+		border-right: 0;
+		margin-right: 0;
+	}
+	.card-columns {
+		column-count: 1;
+	}
+	.raffle_section .card_wrapper .card {
+		max-width: 100%;
+		margin-right: 0;
+		margin-bottom: 10px;
+	}
+	.card_footer {
+		padding: 10px 12px;
+	}
+	.card_footer p {
+		font-size: 14px;
+		line-height: 21px;
+		margin-bottom: 10px;
+	}
+	.closed_raffle {
+		padding-top: 20px;
+	}
+	.pagination_wrapper {
+		padding: 30px 0 40px 0;
+	}
+	.pagination_wrapper li.page-item.page {
+		width: 50px;
+	}
+	
+}	
 @media(min-width: 768px) and (max-width: 1024px){
 	.homesection {
 		padding-bottom: 64px;
@@ -1714,6 +1925,73 @@ button.btn-disabled {
 	.signup_wrapper{
 		padding: 60px 0 60px 0;
 	}
+	.raffle_header nav.navbar {
+		padding: 18px 0 18px 0;
+	}
+	.filter_wrapper .inner_content {
+		padding: 30px 0 50px 0;
+	}
+	.inner_content h2 {
+		font-size: 36px;
+		line-height: 54px;
+		padding-bottom: 20px;
+	}
+	.filter_wrapper .left label {
+		margin-right: 14px;
+	}
+	.filter_wrapper label {
+		font-size: 17px;
+		line-height: 27px;
+	}
+	.filter_wrapper form {
+		align-items: center;
+		justify-content: center;
+		padding: 20px 20px;
+	}
+	.filter_wrapper input[type="text"] {
+		font-size: 20px;
+		line-height: 24px;
+		padding: 13px 15px;
+	}
+	.filter_wrapper .left input {
+		margin-right: 18px;
+		max-width: 64%;
+	}
+	.filter_wrapper .right input[type="text"] {
+		max-width: 135px;
+		margin-right: 20px;
+	}
+	.filter_wrapper form .left {
+		width: 45%;
+		margin-right: 35px;
+	}
+	.filter_wrapper form .right {
+		width: 50%;
+	}
+	.raffle_section h4 {
+		font-size: 20px;
+		line-height: 36px;
+		margin-bottom: 15px;
+	}
+	.card_footer {
+		padding: 16px 14px 18px 16px;
+	}
+	.card_footer p {
+		font-size: 15px;
+		line-height: 22px;
+		margin-bottom: 16px;
+	}
+	.raffle_section .card_wrapper .card {
+		margin-right: 20px;
+		margin-bottom: 20px;
+	}
+	.closed_raffle {
+		padding-top: 38px;
+	}
+	.pagination_wrapper {
+		padding: 56px 0 70px 0;
+	}
+
 }
 
 @media (max-width: 440px){
@@ -1751,7 +2029,6 @@ button.btn-disabled {
 	}
 	.card h6{
 		padding: 10px 6px;
-		
 	}  
 	.springwrapper .text_box {
 		padding-top: 45px;
@@ -1781,5 +2058,15 @@ button.btn-disabled {
 	.client_wrapper .grid-container {
 		margin-left: -20px;
 	}
+	.raffle_section .card_wrapper {
+		margin-left: 0;
+		padding: 0;
+		width: 100%;
+	}
+	.card-columns {
+		column-count: 2;
+		
+	}
+	
 }	
 
