--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a:hover {
 	
 }
 .container{
-	max-width: calc( 1140px + 30px);
+	max-width: calc( 1140px + 20);
 	margin-right: auto;
 	margin-left: auto;
 }
@@ -727,7 +727,7 @@ footer .social-media li.text_button {
 	padding-bottom: 0;
 }
 .raffle_header nav.navbar {
-    padding: 36px 0 32px 0;
+    padding: 36px 0 24px 0;
     margin-bottom: 0; 
 }
 .raffle_page {
@@ -736,7 +736,7 @@ footer .social-media li.text_button {
 .filter_wrapper .inner_content{
 	padding: 50px 0 82px 0;
 }
-.inner_content h2{
+.filter_wrapper h2{
     font-size: 50px;
     font-weight: 700;
     line-height: 75px;
@@ -949,10 +949,10 @@ button.btn-disabled {
 }
 .checkbox_content .checkmark {
 	position: absolute;
-    top: 2px;
+    top: 0;
     left: 0;
-    height: 25px;
-	width: 25px;
+    height: 30px;
+	width: 30px;
 	border-radius: 4px;
 	background-color: #ccc;
 }
@@ -965,10 +965,10 @@ button.btn-disabled {
     display: block;
 }
 .checkbox_content .checkmark:after {
-    left: 9px;
-    top: 4px;
-    width: 8px;
-    height: 14px;
+    left: 10px;
+    top: 2px;
+    width: 10px;
+    height: 23px;
     border: solid white;
     border-width: 0 2px 2px 0;
     -webkit-transform: rotate(45deg);
@@ -1237,21 +1237,22 @@ border:2px solid #359BE0;
 	background-size: 43%, 17%;
     border-bottom: 1px solid #F6DB99;
 	margin-bottom: 97px;
+	border-right: 0;
 }
 .raffle_page .homesection.header {
-	padding-bottom: 264px;
+	padding-bottom: 250px;
 }
 .homesection.header .container{
-	max-width: calc( 1140px + 30px);
+	max-width: 1140px;
 }	
 .header .filter_wrapper .inner_content {
     padding: 0 0 57px 0;
 }
  .text_button a.btn-positive {
-	padding: 6px 20px;
+	padding: 5px 18px 6px;
 }
 .header .filter_wrapper h2 {
-	padding-bottom: 17px;
+	padding-bottom: 11px;
 	text-align: left;
 }
 .header .filter_wrapper form{
@@ -1262,10 +1263,10 @@ border:2px solid #359BE0;
 	max-width: 400px;
 }
 .raffle_header.header-2 {
-	background-image: url(../svg/header-rightcurve.svg);
-	background-position: 101% 0;
+	background-image: url(../svg/right_circle.svg);
+	background-position: 100% 0;
 	background-repeat: no-repeat;
-	background-size: 34%;
+	background-size: 38%;
 	border-bottom: 0;
 }
 .header-2 .filter_wrapper {
@@ -1273,7 +1274,7 @@ border:2px solid #359BE0;
     height: 250px;
 }
 .header-2 .filter_wrapper .inner_content {
-    padding: 75px 0 57px 0;
+    padding: 75px 0 42px 0;
 }
 .header .filter_wrapper form .left,
 .header-2 .filter_wrapper form .left {
@@ -1286,7 +1287,16 @@ border:2px solid #359BE0;
     background-image: url('../images/black_ticket.svg');
     background-repeat: no-repeat;
     background-position: 100% 0%;
-    margin-top: 30px;
+    margin-top: 44px;
+}
+.header-3 .raffle_header.header {
+    background-image: url(../svg/right_circle.svg);
+    background-position: 100% 0;
+    background-repeat: no-repeat;
+    background-size: 38%;
+    border-bottom: 0;
+	margin-bottom:0;
+	padding-bottom: 0;
 }
 .header-2 .filter_wrapper h2 {
 	color: #FFFFFF;
@@ -1297,8 +1307,46 @@ border:2px solid #359BE0;
     background-color: #FFEBBA;
     max-width: 100%;
 }
+.header-3 .blue-bar{
+	background-position: 100%;
+	background-color: #39BBD4;
+	padding: 48px 0 0 0;
+	max-height: 250px;
+}
+.header-3 .blue-bar h2{
+	font-weight: 400;
+	color: #FFFFFF;
+	padding-bottom: 16px;
+	text-align: left;	
+}
+.header-3 .blue-bar img{
+	max-width: 172px;
+	margin-right: 40px;
+}
+.header-3 .filter_wrapper .inner_content{
+    padding: 0 0 28px;
+}
+.header-3 .filter_wrapper form{
+    max-width: 100%;
+    background-color: transparent;
+}
 
-
+.header-3 .filter_wrapper input[type="text"] {
+    background-color: #FFFFFF;
+    border: 1px solid #DADADA;
+}
+.header-3 .filter_wrapper .form .left {
+	max-width: 68%;
+} 
+.header-3 .filter_wrapper .left input{
+	max-width: 400px;
+}	
+.header-3 hr.filter_line{
+	margin: 0 auto;
+	border-top: none;
+	border-bottom: 1px solid #E3E3E3;
+	width: 72%;
+}
 @media (max-width: 767px){
 	.homesection {
 		padding-bottom: 42px;
@@ -1787,7 +1835,7 @@ border:2px solid #359BE0;
 		padding-bottom: 16px;
 	}
 	.filter_wrapper form {
-		padding: 20px 12px;
+		padding: 10px 10px;
 		flex-direction: column;
 	}
 	.filter_wrapper .left label {
@@ -1906,7 +1954,30 @@ border:2px solid #359BE0;
 	.header-2 .filter_wrapper form .left {
 		border-right: none;
 	}
-
+	.raffle_page .header-3 .homesection.header {
+		padding-bottom: 0; 
+	}
+	.checkbox_content .checkmark {
+		height: 20px;
+		width: 20px;
+	}
+	.checkbox_content .checkmark:after {
+		left: 8px;
+		top: 2px;
+		width: 6px;
+		height: 15px;
+	}
+	.checkbox_content {
+		padding-left: 26px;
+	}
+	.header-3 .blue-bar img {
+		max-width: 80px;
+		margin-right: 15px;
+	}
+	.header-3 .blue-bar {
+		padding: 20px 0 0 0;
+	}
+	
 }	
 @media(min-width: 768px) and (max-width: 1024px){
 	.homesection {
@@ -2280,6 +2351,7 @@ border:2px solid #359BE0;
 		font-size: 20px;
 		line-height: 36px;
 		margin-bottom: 15px;
+		text-align: left;
 	}
 	.card_footer {
 		padding: 16px 14px 18px 16px;
@@ -2321,7 +2393,19 @@ border:2px solid #359BE0;
 	.raffle_header.header-2 {
 		margin-bottom: 150px;
 	}
-	
+	.header-3 .raffle_header.header {
+		background-size: 40%;
+	}
+	.raffle_page .header-3 .homesection.header.header-2 {
+		padding-bottom: 0;
+	}
+	.header-3 .blue-bar img {
+		max-width: 150px;
+		margin-right: 20px;
+	}
+	.header-3 .blue-bar {
+		padding: 30px 0 0 0;
+	}
 }
 
 @media (max-width: 440px){
